Add titles for the pages

--- a/foosball/games/templates/games/game_detail.jinja
+++ b/foosball/games/templates/games/game_detail.jinja
@@ -1,5 +1,7 @@
 {% extends "games/games_base.jinja" %}
 
+{% block title %}{{ _("Game") }} - {{ super() }}{% endblock title %}
+
 {% block content %}
     <div class="row">
         <div class="col-md-12">
