--- a/foosball/templates/pages/about.jinja
+++ b/foosball/templates/pages/about.jinja
@@ -1,5 +1,7 @@
 {% extends "base.jinja" %}
 
+{% block title %}{{ _("About") }} - {{ super() }}{% endblock title %}
+
 {% block nav_about %}active{% endblock %}
 
 {% block content %}
